--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://cdspooner.com/spoonb/csd"
+    "url": "https://github.com/bwitherspoon/csd.git"
   },
   "author": "Brett Witherspoon",
   "license": "UNLICENSED",
