--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "mongodb": "^2.2.33",
     "pug": "^2.0.0-rc.4"
   }
 }
