--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "6.11.4"
   },
   "scripts": {
+    "build": "webpack",
     "start": "node server/server.js",
     "nodemon": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,9 +25,16 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongodb": "^2.2.33",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "nodemon": "^1.12.1",
+    "webpack": "^3.11.0"
   }
 }
