--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.9",
     "nodemon": "^1.12.1",
     "style-loader": "^0.20.1",
