--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongodb": "^2.2.33",
+    "mongoose": "^5.0.6",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
