--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "6.11.4"
   },
   "scripts": {
-    "build": "webpack",
+    "postinstall": "webpack",
     "start": "node server/server.js",
     "nodemon": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
