--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
+    "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.6",
     "pug": "^2.0.0-rc.4",
